# education-portfolio

./: .gitignore  CITATION.cff  CLAUDE.md  Makefile  README.md  README.zh-TW.md  local_config.example.yaml  pyproject.toml
.claude/skills/eval-form/: SKILL.md
.claude/skills/eval-form/references/: api-endpoints.md
src/evalbot/: __main__.py  cli.py  config.py  listing.py  logger.py  models.py  parser.py  session.py  submitter.py
